feat(replica): more implementation
