# src/replica/models/replicaManager.ts
@@ -1,29 +1,34 @@
 import { Logger } from '@map-colonies/js-logger';
 import { inject, injectable } from 'tsyringe';
 import { Services } from '../../common/constants';
-import { removeUndefinedPropertiesFromObject } from '../../common/utils';
+import { IObjectStorageConfig } from '../../common/interfaces';
 import { FILE_REPOSITORY_SYMBOL, IFileRepository } from '../DAL/IFileRepository';
 import { IReplicaRepository, REPLICA_REPOSITORY_SYMBOL } from '../DAL/IReplicaRepository';
+import { isStringUndefinedOrEmpty } from '../../common/utils';
 import { ReplicaNotFoundError, ReplicaAlreadyExistsError } from './errors';
-import { Replica, ReplicaMetadata, ReplicaResponse } from './replica';
+import { Replica, ReplicaMetadata, ReplicaResponse, ReplicaWithFiles } from './replica';
 import { BaseReplicaFilter, PrivateReplicaFilter, PublicReplicaFilter } from './replicaFilter';
 
 @injectable()
 export class ReplicaManager {
+  private readonly urlHeader: string;
+
   public constructor(
     @inject(REPLICA_REPOSITORY_SYMBOL) private readonly replicaRepository: IReplicaRepository,
     @inject(FILE_REPOSITORY_SYMBOL) private readonly fileRepository: IFileRepository,
-    @inject(Services.LOGGER) private readonly logger: Logger
-  ) {}
+    @inject(Services.LOGGER) private readonly logger: Logger,
+    @inject(Services.OBJECT_STORAGE) private readonly objectStorageConfig: IObjectStorageConfig
+  ) {
+    this.urlHeader = this.getUrlHeader();
+  }
 
   public async getReplicaById(replicaId: string): Promise<ReplicaResponse> {
     const replicaWithFiles = await this.replicaRepository.findOneReplicaWithFiles(replicaId);
     if (replicaWithFiles === undefined) {
       throw new ReplicaNotFoundError(`replica with id ${replicaId} was not found`);
     }
-    const { layerId, replicaType, geometryType, timestamp, files } = replicaWithFiles;
-    // TODO: build url
-    const urls = files.map((file) => `https://${file.fileId}.com`);
+    const { layerId, replicaType, geometryType, timestamp } = replicaWithFiles;
+    const urls = this.getReplicaUrls(replicaWithFiles);
     return {
       replicaType,
       layerId,
@@ -39,9 +44,8 @@ export class ReplicaManager {
       const { replicaType, geometryType, layerId } = replicaFilter;
       throw new ReplicaNotFoundError(`replica of type ${replicaType} with geometry type of ${geometryType} on layer ${layerId} was not found`);
     }
-    const { layerId, replicaType, geometryType, timestamp, files } = latestReplicaWithFiles;
-    // TODO: build url
-    const urls = files.map((file) => `https://${file.fileId}.com`);
+    const { layerId, replicaType, geometryType, timestamp } = latestReplicaWithFiles;
+    const urls = this.getReplicaUrls(latestReplicaWithFiles);
     return {
       replicaType,
       layerId,
@@ -52,11 +56,10 @@ export class ReplicaManager {
   }
 
   public async getReplicas(filter: PublicReplicaFilter): Promise<ReplicaResponse[]> {
-    removeUndefinedPropertiesFromObject(filter);
     const replicas = await this.replicaRepository.findReplicas(filter);
     return replicas.map((replica) => {
-      const { layerId, replicaType, geometryType, timestamp, files } = replica;
-      const urls = files.map((file) => `https://${file.fileId}.com`);
+      const { layerId, replicaType, geometryType, timestamp } = replica;
+      const urls = this.getReplicaUrls(replica);
       return {
         replicaType,
         layerId,
@@ -68,9 +71,9 @@ export class ReplicaManager {
   }
 
   public async createReplica(replica: Replica): Promise<void> {
-    const existingReplica = await this.replicaRepository.findOneReplica(replica.id);
+    const existingReplica = await this.replicaRepository.findOneReplica(replica.replicaId);
     if (existingReplica) {
-      throw new ReplicaAlreadyExistsError(`replica with id ${replica.id} already exists`);
+      throw new ReplicaAlreadyExistsError(`replica with id ${replica.replicaId} already exists`);
     }
     await this.replicaRepository.createReplica({ ...replica, isHidden: true });
   }
@@ -83,17 +86,39 @@ export class ReplicaManager {
     await this.fileRepository.createFileOnReplica(replicaId);
   }
 
+  public async updateReplica(replicaId: string, updatedMetadata: ReplicaMetadata): Promise<void> {
+    const replica = await this.replicaRepository.findOneReplica(replicaId);
+    if (replica === undefined) {
+      throw new ReplicaNotFoundError(`replica with id ${replicaId} was not found`);
+    }
+    await this.replicaRepository.updateReplica(replicaId, updatedMetadata);
+  }
+
   public async updateReplicas(filter: PrivateReplicaFilter, updatedMetadata: ReplicaMetadata): Promise<void> {
-    removeUndefinedPropertiesFromObject(filter);
     await this.replicaRepository.updateReplicas(filter, updatedMetadata);
   }
 
+  public async deleteReplica(replicaId: string): Promise<ReplicaResponse> {
+    const deletedReplica = await this.replicaRepository.deleteReplica(replicaId);
+    if (deletedReplica === undefined) {
+      throw new ReplicaNotFoundError(`replica with id ${replicaId} was not found`);
+    }
+    const { layerId, replicaType, geometryType, timestamp } = deletedReplica;
+    const urls = this.getReplicaUrls(deletedReplica);
+    return {
+      replicaType,
+      layerId,
+      geometryType,
+      timestamp,
+      url: urls,
+    };
+  }
+
   public async deleteReplicas(filter: PrivateReplicaFilter): Promise<ReplicaResponse[]> {
-    removeUndefinedPropertiesFromObject(filter);
     const deletedReplicas = await this.replicaRepository.deleteReplicas(filter);
     return deletedReplicas.map((replica) => {
-      const { layerId, replicaType, geometryType, timestamp, files } = replica;
-      const urls = files.map((file) => `https://${file.fileId}.com`);
+      const { layerId, replicaType, geometryType, timestamp } = replica;
+      const urls = this.getReplicaUrls(replica);
       return {
         replicaType,
         layerId,
@@ -102,5 +127,20 @@ export class ReplicaManager {
         url: urls,
       };
     });
+  }
+
+  private getUrlHeader(): string {
+    const { protocol, host, port } = this.objectStorageConfig;
+    return `${protocol}://${host}:${port}`;
+  }
+
+  private getReplicaUrls(replicaWithFiles: ReplicaWithFiles): string[] {
+    const { bucketName, layerId, geometryType, files } = replicaWithFiles;
+    const { projectId } = this.objectStorageConfig;
+    let bucketOrProjectIdWithBucket = bucketName;
+    if (!isStringUndefinedOrEmpty(projectId)) {
+      bucketOrProjectIdWithBucket = `${projectId}:${bucketName}`;
+    }
+    return files.map((file) => `${this.urlHeader}/${bucketOrProjectIdWithBucket}/${layerId}/${geometryType}/${file.fileId}`);
   }
 }
